[package]
name = "lexopt-derive"
license = "BSD-3-Clause"
version = "0.0.1"
authors = ["Vincenzo Palazzo <vincenzopalazzo@member.fsf.org>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
lexopt-helper = { path = "../lexopt-helper" }
kproc-parser = { git = "https://github.com/vincenzopalazzo/kproc-macros.git" }
